--- a/orders.html
+++ b/orders.html
@@ -183,7 +183,7 @@
                             <span class="tracking-content">673290789</span>
                         </div>
                         <div class="col-lg-3 col-6">
-                            <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
+                            <span class="text-muted tracking-title">RECEIVED DATE:</span><br>
                             <span class="tracking-content">___</span>
                         </div>
                         <div class="col-lg-3 col-6">
@@ -192,13 +192,12 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">ORDER AMOUNT:</span> <br>
-                            <span class="tracking-content">$259.00</span>
+                            <span class="tracking-content">$55.00</span>
                         </div>
                     </div>
 
                     <div class="row item-body m-3">
                         <div class="col-lg-6 d-flex justify-content-center">
-                            <img src="resources/images/fashion/fashion6-1.jpg" width="100" height="100" alt="" class="me-2">
                             <img src="resources/images/fashion/fashion7-1.jpg" width="100" height="100" alt="">
                         </div>
                         <div class="col-lg-6 d-flex justify-content-center align-items-center mt-2">
@@ -214,7 +213,7 @@
                             <span class="tracking-content">871090437</span>
                         </div>
                         <div class="col-lg-3 col-6">
-                            <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
+                            <span class="text-muted tracking-title">RECEIVED DATE:</span><br>
                             <span class="tracking-content">___</span>
                         </div>
                         <div class="col-lg-3 col-6">
@@ -242,7 +241,7 @@
                             <span class="tracking-content">891230563</span>
                         </div>
                         <div class="col-lg-3 col-6">
-                            <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
+                            <span class="text-muted tracking-title">RECEIVED DATE:</span><br>
                             <span class="tracking-content">07 Oct, 2021</span>
                         </div>
                         <div class="col-lg-3 col-6">
@@ -251,7 +250,7 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">ORDER AMOUNT:</span> <br>
-                            <span class="tracking-content">$69.00</span>
+                            <span class="tracking-content">$160.00</span>
                         </div>
                     </div>
                     <div class="row item-body m-3">
