--- a/orders/order1.html
+++ b/orders/order1.html
@@ -182,7 +182,7 @@
                             <span class="tracking-content">673290789</span>
                         </div>
                         <div class="col-lg-3 col-6">
-                            <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
+                            <span class="text-muted tracking-title">RECEIVED DATE:</span><br>
                             <span class="tracking-content">___</span>
                         </div>
                         <div class="col-lg-3 col-6">
@@ -191,24 +191,11 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">ORDER AMOUNT:</span> <br>
-                            <span class="tracking-content">$259.00</span>
+                            <span class="tracking-content">$55.00</span>
                         </div>
                     </div>
                     <div class="row item-body m-3">
-                        <h5 class="mt-2 mb-2">Order Items (2)</h5>
-                        <hr>
-                        <div class="item mb-3">
-                            <div class="row d-flex justify-content-center align-items-center">
-                                <div class="col-4">
-                                    <img src="../resources/images/fashion/fashion6-1.jpg" alt="" width="100" height="110">
-                                </div>
-                                <div class="col-8">
-                                    <a class="h6 text-dark" href="../item-detail/white_fur_slippers.html">White Fur Slippers</a> <br>
-                                    <span class="text-muted">$10</span> <br>
-                                    <span class="text-muted">Amount: 1</span>
-                                </div>
-                            </div>
-                        </div>
+                        <h5 class="mt-2 mb-2">Order Item (1)</h5>
                         <hr>
                         <div class="item mt-2">
                             <div class="row d-flex justify-content-center align-items-center">
