--- a/orders/order2.html
+++ b/orders/order2.html
@@ -186,7 +186,7 @@
                             <span class="tracking-content">673290789</span>
                         </div>
                         <div class="col-lg-3 col-6">
-                            <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
+                            <span class="text-muted tracking-title">RECEIVED DATE:</span><br>
                             <span class="tracking-content">___</span>
                         </div>
                         <div class="col-lg-3 col-6">
@@ -204,11 +204,10 @@
                         <div class="item mb-3">
                             <div class="row d-flex justify-content-center align-items-center">
                                 <div class="col-4">
-                                    <img src="../resources/images/fashion/fashion7-1.jpg" alt="" width="100" height="110">
+                                    <img src="../resources/images/fashion/fashion10-1.jpg" alt="" width="100" height="110">
                                 </div>
                                 <div class="col-8">
-                                    <h6>White Fur Slippers</h6>
-                                    <!-- <span class="text-muted">$10</span> <br> -->
+                                    <h6>Vintage handbag</h6>
                                     <span class="text-muted">Amount: 1</span>
                                 </div>
                             </div>
