--- a/orders/order3.html
+++ b/orders/order3.html
@@ -185,68 +185,90 @@
                             <span class="tracking-content">673290789</span>
                         </div>
                         <div class="col-lg-3 col-6">
-                            <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
-                            <span class="tracking-content">09 Oct, 2021</span>
+                            <span class="text-muted tracking-title">RECEIVED DATE:</span><br>
+                            <span class="tracking-content">07 Oct, 2021</span>
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">STATUS:</span> <br>
-                            <span class="tracking-content">In Processing</span>
+                            <span class="tracking-content">Delivered</span>
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">ORDER AMOUNT:</span> <br>
-                            <span class="tracking-content">$00.00</span>
+                            <span class="tracking-content">$160.00</span>
                         </div>
                     </div>
                     <div class="row item-body m-3">
-                        <h5 class="mt-2 mb-2">Exchange Item (1)</h5>
+                        <h5 class="mt-2 mb-2">Order Item (1)</h5>
                         <hr>
-                        <div class="item mb-3">
+                        <div class="item mt-2">
                             <div class="row d-flex justify-content-center align-items-center">
                                 <div class="col-4">
-                                    <img src="../resources/images/fashion/fashion7-1.jpg" alt="" width="100" height="110">
+                                    <img src="../resources/images/electronic/electronic8-1.jpg" alt="" width="100" height="110">
                                 </div>
                                 <div class="col-8">
-                                    <h6>White Fur Slippers</h6>
-                                    <!-- <span class="text-muted">$10</span> <br> -->
+                                    <a class="text-dark h6" href="../item-detail/swiss_court_pro_II.html">Vintage Telephone</a> <br>
+                                    <span class="text-muted">$50</span> <br>
                                     <span class="text-muted">Amount: 1</span>
                                 </div>
                             </div>
                         </div>
                         <hr>
-                        <div class="d-flex justify-content-end">
-                            <a href="#" class="btn-cancel text-center w-25 p-1 rounded-3">Cancel</a>
+                        <div class="item mt-2">
+                            <div class="row d-flex justify-content-center align-items-center">
+                                <div class="col-4">
+                                    <img src="../resources/images/electronic/electronic7-1.jpg" alt="" width="100" height="110">
+                                </div>
+                                <div class="col-8">
+                                    <a class="text-dark h6" href="../item-detail/swiss_court_pro_II.html">Sony Xperia Z3</a> <br>
+                                    <span class="text-muted">$50</span> <br>
+                                    <span class="text-muted">Amount: 1</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="item mt-2">
+                            <div class="row d-flex justify-content-center align-items-center">
+                                <div class="col-4">
+                                    <img src="../resources/images/electronic/electronic6-1.jpg" alt="" width="100" height="110">
+                                </div>
+                                <div class="col-8">
+                                    <a class="text-dark h6" href="../item-detail/swiss_court_pro_II.html">Canon Pixma Printer</a> <br>
+                                    <span class="text-muted">$50</span> <br>
+                                    <span class="text-muted">Amount: 1</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class=" item border bg-white mt-2 p-3 ">
-                    <h5 class="mt-2 mb-2 ">Order Total</h5>
-                    <div class="d-flex justify-content-between ">
+                <div class="item border bg-white mt-2 p-3">
+                    <h5 class="mt-2 mb-2">Order Total</h5>
+                    <div class="d-flex justify-content-between">
                         <span>Subtotal</span>
-                        <span>$60</span>
+                        <span>$150</span>
                     </div>
                     <hr>
-                    <div class="d-flex justify-content-between ">
+                    <div class="d-flex justify-content-between">
                         <span>Shipping</span>
-                        <span>$00</span>
+                        <span>$10</span>
                     </div>
                     <hr>
-                    <div class="d-flex justify-content-between fw-bold ">
+                    <div class="d-flex justify-content-between fw-bold">
                         <span>Total</span>
-                        <span>$60</span>
+                        <span>$160</span>
                     </div>
                 </div>
-                <div class="item border bg-white mt-2 p-3 ">
-                    <h5 class="mt-2 mb-2 ">Shipping Details</h5>
-                    <div class="row ">
-                        <div class="col-lg-6 ">
+                <div class="item border bg-white mt-2 p-3">
+                    <h5 class="mt-2 mb-2">Shipping Details</h5>
+                    <div class="row">
+                        <div class="col-lg-6">
                             <h6>Shipping Address:</h6>
-                            <p class="text-muted ">
+                            <p class="text-muted">
                                 Daniel Robinson, 3997 Raccoon Run, Kingston, 45644, United States, 6146389574
                             </p>
                         </div>
-                        <div class="col-lg-6 ">
+                        <div class="col-lg-6">
                             <h6>Payment Method:</h6>
-                            <p class="text-muted ">
+                            <p class="text-muted">
                                 Payment on delivery
                             </p>
                         </div>
