--- a/profile.html
+++ b/profile.html
@@ -237,6 +237,37 @@
                     </div>
 
                     <h5 class="mt-4">Social Network</h5>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <a class="btn-share btn-twitter me-1 my-2" href="#"><i
+                                        class="fab fa-twitter"></i> Twitter</a>
+                                </div>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control form-control-input" id="facebook" placeholder="https://twitter.com/">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <a class="btn-share btn-instagram me-1 my-2" href="#"><i
+                                        class="fab fa-instagram"></i> Instagram</a>
+                                </div>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control form-control-input" id="facebook" placeholder="https://www.instagram.com/">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <a class="btn-share btn-facebook my-2" href="#"><i
+                                        class="fab fa-facebook"></i> Facebook</a>
+                                </div>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control form-control-input" id="facebook" placeholder="https://www.facebook.com/">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <button class="mt-2 btn btn-save">Save All</button>
                 </div>
                 <div class="p-4">
